# Manor-lordings

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  sketch_0.py  sketch_1.py  sketch_2.py  sketch_3.py  sketch_4.py  sketch_5.py  sketch_arcade_0.py  sketch_arcade_1.py  sketch_arcade_2.py  sketch_arcade_3.py  sketch_arcade_4.py  sketch_arcade_5.py  sketch_arcade_6.py  sketch_parallelcomputing_0.py
manor/: diseases.py  main.py  utils.py
