[tool.poetry]
name = "manor-lordings"
version = "0.1.0"
description = ":)"
authors = ["egeres <egeres.default@gmail.com>"]
readme = "README.md"
packages = [{ include = "manor" }]

[tool.poetry.dependencies]
python = "^3.10"
rich = ">=13.7.1"
tqdm = ">=4.66.4"
cowsay = ">=6.1"
pygame = "^2.6.0"
typer = "^0.12.4"

[tool.poetry.group.dev.dependencies]
black = ">=24.2.0"
mypy = ">=1.9.0"
pre-commit = ">=3.6.2"
pytest-cov = ">=4.1.0"
pytest-sugar = ">=1.0.0"
pytest-xdist = ">=3.5.0"
pytest = ">=8.1.1"
ruff = ">=0.6.1"
coverage = ">=7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
